Change the old name of website and given new name

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <em>Ahmedabad,Gujarat</em>
         </div>
         <div class="carousel-item">
-          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life,probably huh!!</h2>
+          <h2 class="testimonial-text">My dog used to be so lonely, but with TradeDog's help, they've found the love of their life,probably huh!!</h2>
           <img class="testimonial-image" src="images/Monil.jpg" alt="Customer-profile">
           <em>Monil Gandhi</em>
         </div>
